[package]
name = "light-dragon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
either = { version = "1.8.1", features = ["serde"] }
regex = "1.7.1"
rouille = "3.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
shellexpand = "3.0.0"
